Remove search focus and set sort filter container css

--- a/app/assets/stylesheets/sort.css
+++ b/app/assets/stylesheets/sort.css
@@ -1,4 +1,4 @@
-.sort-container .condition-container {
+.sort-container,.condition-container {
   font-family: 'Graphik Webfont', -apple-system, BlinkMacSystemFont, 'Roboto',
     'Droid Sans', 'Segoe UI', 'Helvetica', Arial, sans-serif;
   margin-top: 14px;
