--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -7,7 +7,7 @@
   display: grid;
   grid-gap: 10px;
   padding: 20px 40px 20px 40px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .listing-show-author-buttons>.btn ,.listing-show-author-buttons.btn-primary{
