--- a/app/assets/stylesheets/paginate.css
+++ b/app/assets/stylesheets/paginate.css
@@ -1,38 +1,39 @@
-.pagination-wrapper{
-    margin-bottom: 50px;
-    margin-top: 18px;
-    display: block;
-    color: #222;
-    font-family: "Graphik Webfont",-apple-system,BlinkMacSystemFont,"Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
-    font-size: 14px;
-    line-height: 1.4;
-    text-align: center;
+.pagination-wrapper {
+  width: 100%;
+  margin-bottom: 50px;
+  margin-top: 18px;
+  display: block;
+  color: #222;
+  font-family: 'Graphik Webfont', -apple-system, BlinkMacSystemFont, 'Roboto',
+    'Droid Sans', 'Segoe UI', 'Helvetica', Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
+  text-align: center;
 }
 
-.pagination-wrapper a.item{
-    margin-left: 0;
-    border-color: rgba(0, 0, 0, 0.15);
-    border-style: solid;
-    border-width: 1px;
-    display: inline-block;
-    font-family: inherit;
-    font-size: 14px;
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    user-select: none;
-    white-space: nowrap;
-    padding: 8px 12px;
-    cursor: pointer;
+.pagination-wrapper a.item {
+  margin-left: 0;
+  border-color: rgba(0, 0, 0, 0.15);
+  border-style: solid;
+  border-width: 1px;
+  display: inline-block;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  white-space: nowrap;
+  padding: 8px 12px;
+  cursor: pointer;
 }
 
-.pagination-wrapper a.active{
-    background-color: #f0f0ec;
-    border-color: rgba(0, 0, 0, 0.5);
+.pagination-wrapper a.active {
+  background-color: #f0f0ec;
+  border-color: rgba(0, 0, 0, 0.5);
 }
 
-a[type="ellipsisItem"]:hover {
-    cursor: default;
-    border-color:5px solid red;
-
+a[type='ellipsisItem']:hover {
+  cursor: default;
+  border-color: 5px solid red;
 }
