Do not display disabled listing unless author

--- a/app/assets/stylesheets/error.css
+++ b/app/assets/stylesheets/error.css
@@ -1,4 +1,4 @@
-.error-page, .loading-page, .no-result, .cart-empty{
+.error-page, .loading-page, .no-result, .cart-empty, .error-message{
     line-height: 16px;
     font-size: 15px;
     color: #222;
