--- a/app/assets/stylesheets/cart_index.scss
+++ b/app/assets/stylesheets/cart_index.scss
@@ -157,3 +157,20 @@
 .cart-left-section-middle-section-wrapper .cart-index-item-photo {
   overflow: hidden;
 }
+
+.checkout-instructions {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+#payment-venmo {
+  background-image: image-url('payment_venmo.png');
+  background-repeat: no-repeat;
+  height: 20%;
+  height: auto;
+  min-height: 20%;
+  width: 100%;
+  margin-top: 20px;
+  background-size: 150px;
+  box-sizing: border-box;
+}
