--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -277,12 +277,12 @@ li {
   padding-bottom: 2px;
 }
 
-.icon-img-discover > .fa-briefcase {
+.icon-img-question > .fa-question-circle {
   /* border: 1px solid transparent; */
-  font-size: 20px;
+  font-size: 24px;
   margin-top: -10px;
   padding-bottom: 2px;
-  padding-left: 18px;
+  padding-left: 2px;
 }
 
 .account-nav a:not(:hover):not(:focus):not(:active) #sign-in-link {
