--- a/app/assets/stylesheets/cart_index.scss
+++ b/app/assets/stylesheets/cart_index.scss
@@ -163,8 +163,8 @@
   margin-top: 20px;
 }
 
-#payment-venmo {
-  background-image: image-url('payment_venmo.png');
+#payment-cashapp {
+  background-image: image-url('payment_cashapp.png');
   background-repeat: no-repeat;
   width: 100%;
   min-width: 300px;
