listing index css

--- a/app/assets/stylesheets/listing_index.css
+++ b/app/assets/stylesheets/listing_index.css
@@ -69,6 +69,8 @@
   grid-auto-rows: minmax(100px, auto);
   /* max-height: 294px; */
   text-decoration: none;
+  justify-content: space-evenly;
+  padding-left: 40px;
 }
 
 .index-wrapper > li > div {
