--- a/app/assets/stylesheets/slider.css
+++ b/app/assets/stylesheets/slider.css
@@ -2,75 +2,78 @@
     position: relative
 } */
 
-.listing-left-half{
-    position: relative
+.listing-left-half {
+  position: relative;
 }
 
-.nextArrow{
-    position: absolute;
-    z-index: 2;
-    right: 0;
-    top: 36%;
-    /* top: 9vh; */
-    opacity: 0.7;
-    background-color: #757575;
+.nextArrow {
+  position: absolute;
+  z-index: 2;
+  right: 0;
+  top: 36%;
+  /* top: 7vh; */
+  opacity: 0.7;
+  background-color: #757575;
 }
 
-.backArrow:hover,.nextArrow:hover{
-    opacity: 0.9;
+.backArrow:hover,
+.nextArrow:hover {
+  opacity: 0.9;
 }
 
-.backArrow{
-    position: absolute; 
-    z-index: 2; 
-    left: 0; 
-    top: 36%;
-    /* top: 9vh; */
-    opacity: 0.7;
-    background-color: #757575;
+.backArrow {
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  top: 36%;
+  /* top: 7vh; */
+  opacity: 0.7;
+  background-color: #757575;
 }
 
-.slider-image{
-    overflow: hidden;
-    /* height: 70vh; */
-    height: 60vh;
-    width: 100%;
-    object-fit: contain;
-    /* object-position: 50% 0%; */
-    max-height: 430px;
-    cursor: zoom-in;
+.slider-image {
+  overflow: hidden;
+  /* height: 70vh; */
+  height: 60vh;
+  width: 100%;
+  object-fit: contain;
+  /* object-position: 50% 0%; */
+  max-height: 430px;
+  cursor: zoom-in;
 }
 
-.slider-wrapper{
-    margin-bottom: 5px;
-
+.slider-wrapper {
+  margin-bottom: 5px;
+  position: relative;
 }
 
-.slider-thumbnails-wrapper{
-    /* display: grid; */
-    /* grid-template-columns: repeat(999, 1fr); */
-    /* grid-template-columns: repeat(50px, minmax(50px, 1fr)); */
-    /* grid-gap: 3px; */
-    position: relative;
-    height: 100%;
+.slider-thumbnails-wrapper {
+  /* display: grid; */
+  /* grid-template-columns: repeat(999, 1fr); */
+  /* grid-template-columns: repeat(50px, minmax(50px, 1fr)); */
+  /* grid-gap: 3px; */
+  position: relative;
+  height: 100%;
 }
 
-.slider-thumbnails{
-    height: 53px;
-    width: 53px;
-    margin-left: 5px;
-    opacity: 0.7;
+.slider-thumbnails {
+  height: 53px;
+  width: 53px;
+  margin-left: 5px;
+  opacity: 0.7;
 }
 
-.nextArrow:hover, .backArrow:hover, .slider-thumbnails:hover{
-    cursor: pointer;
-    opacity: 1.0;
+.nextArrow:hover,
+.backArrow:hover,
+.slider-thumbnails:hover {
+  cursor: pointer;
+  opacity: 1;
 }
 
-.slider-thumbnail-inner-wrapper{
-    display: flex;
+.slider-thumbnail-inner-wrapper {
+  display: flex;
 }
 
-.slider-thumbnail-inner-wrapper{
-    justify-content: center;
+.slider-thumbnail-inner-wrapper {
+  justify-content: center;
 }
