--- a/app/assets/stylesheets/sort.css
+++ b/app/assets/stylesheets/sort.css
@@ -1,4 +1,5 @@
-.sort-container,.condition-container {
+.sort-container,
+.condition-container {
   font-family: 'Graphik Webfont', -apple-system, BlinkMacSystemFont, 'Roboto',
     'Droid Sans', 'Segoe UI', 'Helvetica', Arial, sans-serif;
   margin-top: 14px;
@@ -15,6 +16,7 @@
 .filters {
   display: flex;
   justify-content: flex-end;
+  margin-right: 20px;
 }
 
 /* .sort-inner-container {
@@ -26,6 +28,6 @@
   margin-right: 15px;
 }
 
-#sortParamOrder #condition{
+#sortParamOrder #condition {
   font-size: 12px;
 }
