add manage listing link on main page and categories include like new

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -246,7 +246,7 @@ li {
   border-right: 1px solid #e1e3df;
 }
 
-.text-sell-etsy {
+.text-sell-etsy, .manage-listing{
   margin-top: 28px !important;
 }
 
