--- a/app/assets/stylesheets/react_loading.css
+++ b/app/assets/stylesheets/react_loading.css
@@ -1,8 +1,8 @@
 #react-loading {
-  min-height: 100px;
+  min-height: 150px;
   height: 100%;
   width: 100%;
   left: 45vw;
   padding-top: 50px;
-  position: fixed;	
+  text-align: -webkit-center;
 }
