--- a/app/assets/stylesheets/header_banner.css
+++ b/app/assets/stylesheets/header_banner.css
@@ -10,6 +10,10 @@
   padding-top: 5px;
 }
 
+#header-banner-mobile {
+  height: 45px;
+}
+
 .appointment-link {
   text-decoration: underline;
   color: white;
