--- a/app/assets/stylesheets/header_banner.css
+++ b/app/assets/stylesheets/header_banner.css
@@ -11,7 +11,15 @@
 }
 
 #header-banner-mobile {
-  height: 45px;
+  font-family: 'Graphik Webfont', -apple-system, BlinkMacSystemFont, 'Roboto',
+    'Droid Sans', 'Segoe UI', 'Helvetica', Arial, sans-serif;
+  text-align: center;
+  background: #d68391;
+  color: white;
+  height: 30px;
+  font-size: 15px;
+  font-weight: 700;
+  padding-top: 5px;
 }
 
 .appointment-link {
