add banner height

--- a/app/assets/stylesheets/header_banner.scss
+++ b/app/assets/stylesheets/header_banner.scss
@@ -17,7 +17,8 @@
 
 #header-banner-mobile {
   @extend %header-banner-styles;
-  height: 45px;
+  font-size: 20px;
+  height: 60px;
 }
 
 .appointment-link {
