change bookme icon

--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -35,3 +35,30 @@
 #direction-btn {
   width: 200px;
 }
+
+#booking-book-me-text {
+  font-size: 40px;
+  font-weight: 600;
+  text-decoration: none;
+  color: black;
+}
+
+#booking-book-me-text a:link {
+  text-decoration: none;
+  color: black;
+}
+
+#booking-book-me-text a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+#booking-book-me-text a:hover {
+  text-decoration: none;
+  color: black;
+}
+
+#booking-book-me-text a:active {
+  text-decoration: none;
+  color: black;
+}
