set calendly to responsive

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
     <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/castleandchair', text: 'Schedule time with me', color: '#0069ff', textColor: '#ffffff', branding: true }); }</script>
     </link>
   </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <body>
     <%= yield %>
