use react calendly package

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,8 @@
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
     </link>
   </head>
-
+ 
+  <%#  <meta name="viewport" content="width=device-width, initial-scale=1"> %>
   <body>
     <%= yield %>
   </body>
