--- a/app/assets/stylesheets/listing_form.css
+++ b/app/assets/stylesheets/listing_form.css
@@ -38,7 +38,8 @@
 .create-listing-description-input,
 .create-list-price-input,
 .create-listing-merchant-input,
-.create-listing-phone-number-input {
+.create-listing-phone-number-input,
+.create-listing-internal-textarea {
   width: 100%;
   border: 1px solid #cfcbc8;
   background: #f9f9f8;
@@ -62,7 +63,8 @@
   height: 34px;
 }
 
-.create-listing-overview .create-listing-overview-textarea {
+.create-listing-overview .create-listing-overview-textarea,
+.create-listing-internal-textarea {
   height: 79px;
   white-space: pre-wrap;
 }
@@ -92,7 +94,8 @@
   margin-left: 10px;
 }
 
-.create-listing-description-input {
+.create-listing-description-input,
+.create-listing-internal-textarea {
   height: 139px;
 }
 
