--- a/app/assets/stylesheets/listing_form.css
+++ b/app/assets/stylesheets/listing_form.css
@@ -8,7 +8,8 @@
 .create-form-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 530px;
+  min-height: 1000px;
+  height: 100%;
   grid-column-gap: 10px;
 }
 
@@ -27,6 +28,10 @@
 .create-listing-photo p {
   align-self: center;
   justify-self: center;
+}
+
+#create-listing-photo-intake {
+  display: grid;
 }
 
 .create-listing-photo-inner {
