add directions to add to cart button

--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -140,7 +140,8 @@
 }
 
 .delivery-estimate {
-  margin-bottom: 35px;
+  margin-top: 15px;
+  margin-bottom: 25px;
 }
 
 .listing-details .add-to-cart {
