--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -87,6 +87,11 @@
   /* height: 70vh; */
 }
 
+.image-gallery-svg {
+  height: 50px !important;
+  width: 50px !important;
+}
+
 .listing-details .listing-right-half {
   font-size: 14px;
   background-color: rgb(255, 255, 255);
