--- a/app/assets/stylesheets/listing_index.css
+++ b/app/assets/stylesheets/listing_index.css
@@ -9,7 +9,7 @@
   font-weight: 300;
   line-height: 22.4px;
   color: rgb(34, 34, 34);
-  min-height: 400px;
+  min-height: 350px;
   justify-items: center;
 }
 
@@ -44,7 +44,7 @@
 .listing-item-image {
   position: relative;
   width: 400px;
-  height: 400px;
+  height: 350px;
   overflow: hidden;
 }
 
@@ -62,6 +62,7 @@
   /* -webkit-transform: translate(-50%, -50%); */
   /* -ms-transform: translate(-50%, -50%); */
   /* transform: translate(-50%, -50%); */
+  object-fit: cover;
 }
 
 .listing-item-image {
