--- a/app/assets/stylesheets/sort.css
+++ b/app/assets/stylesheets/sort.css
@@ -4,7 +4,7 @@
     'Droid Sans', 'Segoe UI', 'Helvetica', Arial, sans-serif;
   margin-top: 14px;
   line-height: 16px;
-  font-size: 14px;
+  /* font-size: 14px; */
   color: #222;
   line-height: 19.6px;
   font-weight: 350;
@@ -19,6 +19,13 @@
   margin-right: 20px;
 }
 
+
+/* #filters-mobile,
+#condition,
+#sortParamOrder {
+  font-size: 25px;
+} */
+
 /* .sort-inner-container {
   position: absolute;
   right: 0;
@@ -29,5 +36,5 @@
 }
 
 #sortParamOrder #condition {
-  font-size: 12px;
+  /* font-size: 12px; */
 }
